--- a/setup.cfg
+++ b/setup.cfg
@@ -19,9 +19,9 @@ package_dir =
     = src
 python_requires = >=3.10
 install_requires =
-    opencv-python==4.7
-    numpy==1.24
-    Pillow==9.4
+    opencv-python>=4.7
+    numpy>=1.24
+    Pillow>=9.4
 
 [options.entry_points]
 console_scripts =
